feat: 네번째 블로그 수정

--- a/_posts/2024-11-25-baekjoon-1816.md
+++ b/_posts/2024-11-25-baekjoon-1816.md
@@ -23,11 +23,11 @@ N개의 키가 주어졌을 때, 각 키가 **적절한 암호키**인지 판별
 하지만 주어질 수 있는 키의 범위를 보면 **10^12 ~ 10^18** 이기에 완전탐색으로 접근하지만 너무 무식한 것 같아서 문제를 다시 보았다.  
 
 ### **2. 문제 조건 활용**
-문제를 다시 읽어보니 중요한 힌트가 있었습니다:  
+문제를 다시 읽어보니 중요한 힌트가 있었다:  
 **만일 S의 모든 소인수가 10^6보다 크다면 그 수는 적절한 암호 키이고, 그렇지 않은 경우는 적절하지 못한 암호 키가 된다.**  
 즉, 키가 1,000,000 이하의 소인수를 갖지 않으면 "YES"를 출력하면 된다는 말이다.  
 
-따라서 반복문을 활용해 2부터 1,000,000까지만 검사하는 방식으로 해결하는 방법으로진행했다..!!
+따라서 반복문을 활용해 2부터 1,000,000까지만 검사하는 방식으로 해결하는 방법으로 진행했다..!!
 
 
 ## **코드 구현**
