feat: 여섯번째블로그업로드

--- a/_posts/2024-11-25-baekjoon-1816.md
+++ b/_posts/2024-11-25-baekjoon-1816.md
@@ -7,7 +7,7 @@ tags: [brute force, 완전탐색, 코테]     # TAG names should always be lower
 
 
 ## **문제 요약**
-### [(BOJ)1816 -  암호키](https://www.acmicpc.net/problem/1816)  
+**출처**: [(BOJ)1816 -  암호키](https://www.acmicpc.net/problem/1816)  
 
 N개의 키가 주어졌을 때, 각 키가 **적절한 암호키**인지 판별하여 "YES" 또는 "NO"를 출력하는 문제이다.  
 암호키의 조건은 다음과 같다:
