--- a/_posts/2024-12-23-baekjoon-14568.md
+++ b/_posts/2024-12-23-baekjoon-14568.md
@@ -7,7 +7,7 @@ tags: [brute force, 완전탐색, 코테]     # TAG names should always be lower
 
 
 ## **문제 요약**
-### [(BOJ)14568 -  2017 연세대학교 프로그래밍 경시대회](https://www.acmicpc.net/problem/14568)  
+**출처**: [(BOJ)14568 -  2017 연세대학교 프로그래밍 경시대회](https://www.acmicpc.net/problem/14568)  
 
 N개의 사탕이 주어졌을 때, 택희, 영훈, 남규가 아래 조건에 맞추어 적절히 사탕을 나누어 가질 수 있는 경우의 수를 구하는 문제이다.  
 
